fix: secrets: inherit only applies to reusable workflows
Token should be passed explicitly to action I think.

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -14,4 +14,4 @@ jobs:
         uses: RedlineTriad/stale-pr-notifier@main
         with:
           stale-pr-time: 8
-        secrets: inherit
+          github-token: ${{ secrets.GITHUB_TOKEN }}
