fix: add pr write permissions to workflow
Required to write comments and iterate over open PRs.

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -3,6 +3,9 @@ on:
     branches:
       - main
 
+permissions:
+  pull-requests: write
+
 jobs:
   hello_world_job:
     name: A job to test the Stale PR Notifier action
